--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -260,14 +260,20 @@ textarea {
   scrollbar-width: none; /* Firefox */
 }
 
-
 .swiper-pagination-bullet {
-  width: 12px!important;  
-  height: 12px!important;  
+  width: 12px !important;
+  height: 12px !important;
 }
 .swiper-button-next-custom.swiper-button-disabled,
 .swiper-button-prev-custom.swiper-button-disabled {
   opacity: 0.5;
   cursor: not-allowed;
-  background-color: var(--primary)!important; /* or use Tailwind color equivalent */
+  background-color: var(
+    --primary
+  ) !important; /* or use Tailwind color equivalent */
+}
+
+
+nav.image-gallery-thumbnails-container button {
+  width: auto;
 }
